Add cloud authorization
